data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1830.wast
;; 1. **Test Unwinding Operand Stack for `br` Instruction**:    - Create a `block` with `i32` type that has a `br` instruction targeting an outer block. Ensure the inner block consumes an additional operand that is not present in the outer block's context.    - This test checks if the correct block level is targeted, verifying the stack is unwound and operands are set correctly according to the block type.

(assert_invalid
  (module (func $unwind-operand-stack-br (result i32)
    (block (result i32)
      (i32.const 42)
      (block (result i32)
        (i32.const 10)
        (br 1)
      )
      (i32.const 0)
    )
  ))
  "type mismatch"
)